Fix Loader Visibility

--- a/src/components/common/loader/Loader.module.css
+++ b/src/components/common/loader/Loader.module.css
@@ -1,3 +1,6 @@
 .loader {
+  display: flex;
+  justify-content: center;
+  margin-top: 10rem;
   color: var(--primary-color);
 }
